# FakeDataForge

./: .gitignore  Readme.md  pyproject.toml
fake_data_generator/: __init__.py  cli.py  custom.py  generator.py  prebuilt.py  prompts.py  schema.py
file_converter/: __init.py  cli.py  reader.py  writer.py
visualize_file/: __init.py  cli.py  reader.py  table.py
